test_regress/t/t_tagged_expr_not_assign_bad.out
%Error: t/t_tagged_expr_not_assign_bad.v:18:20: Tagged expression requires a context type
                                              : ... note: In instance 't'
   18 |     $display("%d", tagged Valid (42));
      |                    ^~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
